RESOLVED FIXED283298
[GStreamer][PipeWire] getDisplayMedia() broken
https://bugs.webkit.org/show_bug.cgi?id=283298
Summary [GStreamer][PipeWire] getDisplayMedia() broken
Philippe Normand
Reported 2024-11-18 07:13:05 PST
.
Attachments
Philippe Normand
Comment 1 2024-11-18 07:30:45 PST
EWS
Comment 2 2024-11-19 00:45:11 PST
Committed 286790@main (34beac2e3606): <https://commits.webkit.org/286790@main> Reviewed commits have been landed. Closing PR #36801 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-19 00:46:15 PST
Note You need to log in before you can comment on or make changes to this bug.